Fix navbar layout issue

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
 
-body {
+body,html {
+    height: 100%;
     font-family: 'Inter', Arial, Helvetica, sans-serif;
     padding: 0;
     margin: 0;
@@ -11,12 +12,19 @@ body {
 }
 
 .app {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
     color: #242424;
 }
 
 h1 {
     color: #373737;
     margin: 12px 0;
+}
+
+p {
+    margin: 8px 0;
 }
 
 h3 {
